# irelease

./: CITATION.cff  LICENSE  MANIFEST.in  README.md  irelease.py  make_build.sh  make_clean.sh  make_new_build.sh  pyproject.toml  release.sh  requirements.txt  setup.py
.github/: FUNDING.yml
irelease/: __init__.py  examples.py  irelease.py
