[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irelease"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "irelease is an Python package to release your package to Pypi."
readme = "README.md"
requires-python = ">=3"
license = "MIT"
keywords = [
    "Python",
    "PyPI",
    "release automation",
    "package release",
    "versioning",
    "tagging",
    "build automation",
    "publishing",
    "continuous integration",
    "CI/CD",
    "automation",
    "release management"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ['twine','packaging','numpy', 'toml', 'build']

[project.scripts]
pyrelease = "irelease.irelease:main"
irelease = "irelease.irelease:main"

[project.urls]
Homepage = "https://erdogant.github.io/irelease"
Download = "https://github.com/erdogant/irelease/archive/{version}.tar.gz"

[tool.setuptools]
packages = ["irelease"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "irelease.__version__" }
